# hermes-line-wordpress-agent

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: policy.example.yaml  site.profile.example.yaml
deploy/: docker-compose.example.yml  hermes-line-gateway.env.example  hermes-line-gateway.service.example  hermes-mcp-config.vm.example.json  hermes-wordpress-mcp.env.example  install-vm.sh  run-line-gateway.sh  run-mcp.sh
docs/: architecture.md  github-publishing.md  line-setup.md  scheduling.md  security.md  vm-deployment.md  wordpress-setup.md
examples/: hermes-mcp-config.json
skills/image-post/: SKILL.md
skills/seo-article/: SKILL.md
skills/wordpress-editor/: SKILL.md
src/hermes_line_wordpress_agent/: __init__.py  approval.py  config.py  line_gateway.py  mcp_server.py  wp_client.py
wordpress-plugin/hermes-agent-bridge/: hermes-agent-bridge.php
