[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-line-wordpress-agent"
version = "0.1.0"
description = "Reusable Hermes Agent toolkit for LINE-operated WordPress publishing, SEO, media generation, and approval workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hermes LINE WordPress Agent contributors" }]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.2",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
hermes-wp-mcp = "hermes_line_wordpress_agent.mcp_server:main"
hermes-wp-policy-check = "hermes_line_wordpress_agent.approval:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

